# IP-CloudflareTerraform

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/config/docker-base-image-monitor/: base-images.json
.github/workflows/: check-base-images.yml  docker-maintenance.yml  docker-release.yml
docs/: ARCHITECTURE.md  BACKUP.md  DIFF.md  RESTORE-RUNBOOK.md  SECRETS-MANIFEST.md
src/cloudflare-backup/: .dockerignore  Dockerfile  README.md  pyproject.toml
src/cloudflare-backup/backuphelper_cloudflare/: __init__.py  apply.py  cfapi.py  cfterraforming.py  commands.py  config.py  diff.py  export.py  resources.py  snapshot.py  source.py  tofu.py
src/cloudflare-backup/tests/: fakes.py  test_apply.py  test_cfapi.py  test_cfterraforming.py  test_config.py  test_diff.py  test_export.py  test_source.py  test_tofu.py
